// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EvidenceStatement matches snapshot with score 1`] = `
<div
  className="page"
>
  <QuestionView
    displayScoreInfo={true}
    key="1"
    question={
      Object {
        "data": Object {
          "associatedItems": "string",
          "commonCoreStandardsDescription": "string",
          "depthOfKnowledge": "string",
          "educationalDifficulty": "string",
          "evidenceStatement": "string",
          "itemCardViewModel": Object {
            "bankKey": 1,
            "claimCode": "234536",
            "claimLabel": "Math Claim",
            "commonCoreStandardId": "",
            "depthOfKnowledge": "",
            "domain": "MATH",
            "grade": 8,
            "gradeLabel": "grade 3",
            "interactionTypeCode": "",
            "interactionTypeLabel": "",
            "isPerformanceItem": false,
            "itemKey": 1,
            "subjectCode": "MATH",
            "subjectLabel": "math",
            "targetDescription": "Description",
            "targetHash": 212,
            "targetId": "23463467",
            "targetShortName": "1-3",
            "title": "",
          },
          "targetDescription": "string",
        },
        "id": "12334",
        "questionNumber": 1,
        "view": Object {
          "captured": true,
          "html": undefined,
          "id": "12334",
          "picturePath": undefined,
          "type": 1,
        },
      }
    }
  />
</div>
`;

exports[`EvidenceStatement matches snapshot without score 1`] = `
<div
  className="page"
>
  <QuestionView
    displayScoreInfo={false}
    key="1"
    question={
      Object {
        "data": Object {
          "associatedItems": "string",
          "commonCoreStandardsDescription": "string",
          "depthOfKnowledge": "string",
          "educationalDifficulty": "string",
          "evidenceStatement": "string",
          "itemCardViewModel": Object {
            "bankKey": 1,
            "claimCode": "234536",
            "claimLabel": "Math Claim",
            "commonCoreStandardId": "",
            "depthOfKnowledge": "",
            "domain": "MATH",
            "grade": 8,
            "gradeLabel": "grade 3",
            "interactionTypeCode": "",
            "interactionTypeLabel": "",
            "isPerformanceItem": false,
            "itemKey": 1,
            "subjectCode": "MATH",
            "subjectLabel": "math",
            "targetDescription": "Description",
            "targetHash": 212,
            "targetId": "23463467",
            "targetShortName": "1-3",
            "title": "",
          },
          "targetDescription": "string",
        },
        "id": "12334",
        "questionNumber": 1,
        "view": Object {
          "captured": true,
          "html": undefined,
          "id": "12334",
          "picturePath": undefined,
          "type": 1,
        },
      }
    }
  />
</div>
`;
